Lab8/Complier/Errors/Type/log.txt
Complier/main.c: In function ‘main’:
Complier/main.c:7:23: error: invalid operands to binary / (have ‘int’ and ‘char *’)
    7 |     printf("%d\n", 17 / "5"); // Нельзя делить int на char
      |                       ^
      |                       |
      |                       char *
